                - Some small changes have been made in the class 'views.buttons.UnsuccessfulPhoneCallCreation'.
            * Reports :
                - In the field 'report.Field.name', the CustomFields are referenced by their UUID now (see types 'RFT_CUSTOM' & 'RFT_AGG_CUSTOM').
            * Billing :
                - In 'buttons', the class '_ConvertToButton' (& so, the child classes) has been reworked
                    - It injects a string "error" in the context.
                    - "creation_perm" is not injected in the template anymore.
                  The template has been modified, of course.
                - In 'core' :
                    - These variables have been removed : CLASS_MAP, CONVERT_MATRIX, RTYPE_MATRIX.
                    - The function 'get_models_for_conversion()' has been removed.
                - In 'registry', the class 'RelationTypeConverterRegistry' & the variable 'relationtype_converter'
                  have been removed ; you can see in 'creme.opportunities.apps.OpportunitiesConfig.register_billing()'
                  how to code a feature similar to the old relationship conversion.
                - In 'models':
                    - The default statuses are now initialized at models level, not view level.
                    - In the method 'Base.generate_number()' :
                        - The argument "source" has been removed.
                        - An exception is raised if the source (i.e. emitter Organisation) has not been set.
                    - In the model 'AbstractTemplateBase' :
                        - The field "status_id" has been replaced by the field "status_uuid".
                        - The method 'create_entity()' has been re-written to use a new "spawning"
                          system, which is derived from the new cloning system.
                          This new system is de-coupled from the clone & conversion systems;